test_regress/t/t_gen_cond_bitrange_bad.out
%Warning-SELRANGE: t/t_gen_cond_bitrange_bad.v:52:35: Selection index out of range: 2:2 outside 1:0
                                                    : ... note: In instance 't.i_test_gen'
   52 |       if ((g < (SIZE + 1)) && MASK[g]) begin
      |                                   ^
                   ... For warning description see https://verilator.org/warn/SELRANGE?v=latest
                   ... Use "/* verilator lint_off SELRANGE */" and lint_on around source to disable this message.
%Warning-SELRANGE: t/t_gen_cond_bitrange_bad.v:64:29: Selection index out of range: 2:2 outside 1:0
                                                    : ... note: In instance 't.i_test_gen'
   64 |       if ((g < SIZE) && MASK[g+1]) begin
      |                             ^
%Warning-SELRANGE: t/t_gen_cond_bitrange_bad.v:77:30: Selection index out of range: 2:2 outside 1:0
                                                    : ... note: In instance 't.i_test_gen'
   77 |       if ((g < (SIZE)) & MASK[g]) begin
      |                              ^
%Warning-SELRANGE: t/t_gen_cond_bitrange_bad.v:90:32: Selection index out of range: 2:2 outside 1:0
                                                    : ... note: In instance 't.i_test_gen'
   90 |       if (!((g >= SIZE) | ~MASK[g])) begin
      |                                ^
%Error: Exiting due to
